Version 2.5
~~~~~~~~~~~~~~~
Released: 

Features:
- Added Sepia Mode
- Improved exported HTML on small screens

Version 2.4
~~~~~~~~~~~~~~~
Released: 2021-03-10

Bugfixes:
- Fixed a bug where the cursor could go over the bottom of the window
- Fixed a bug where in certain circumstances the bottom line couldn't be clicked
- Improved behaviour when dealing with unsaved files.
- Improved start/end sentence detection in Focus Mode
- Small improvements in the headerbar title
- Cleaned a little bit the Shortcuts Window

Version 2.3
~~~~~~~~~~~~~~~
Released: 2021-03-01

Features:
- New export dialog
- Improved Reveal.js slideshow exports
- Better input/output handling
- Inhibit logout if the document is not saved
- Migrate to xelatex
- Better internal path handling
- New animated progressbar on saving
- Strict sandboxing support

Bugfixes:
- Undo/redo improvements
- Fixes for bad markdown parsing of unordered lists

Version 2.2.0.3
~~~~~~~~~~~~~~~
Released: 2020-05-04

Bugfixes:
 - Better wording for some areas
 - Fixed some issues where Apostrophe couldn't open files from CLI/context menu
 - Now Apostrophe checks if there is unsaved work before exiting via CTRL + Q/W
 - Better parsing of weblinks and links to files
 - Fixed a bug where the bottom portion of the screen was insensitive to mouse input

Version 2.2.0.2
~~~~~~~~~~~~~~~
Released: 2020-04-20

Bugfixes:
 - Fixes for the Elementary OS platform
 - Fixed some links and metadata

Version 2.2.0.1
~~~~~~~~~~~~~~~
Released: 2020-04-18

Features:
 - New headerbar design
 - New preview modes, with the option to sync them to the edit view
 - New preview mode selector
 - New theme selector
 - Rework the autohiding mechanism; now the headerbar fades away when typing, only to reappear when the cursor moves to the top portion of the window
 - Now the content of the texview goes visually bellow the headerbar
 - Overall better styling
 - Added Hemingway mode, which disables the backspace key