@@ -1,0 +1,26 @@
+<Project xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+         xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
+         xmlns:foaf="http://xmlns.com/foaf/0.1/"
+         xmlns:gnome="http://api.gnome.org/doap-extensions#"
+         xmlns="http://usefulinc.com/ns/doap#">
+
+  <name xml:lang="en">Apostrophe</name>
+  <shortdesc xml:lang="en">An elegant, distraction-free markdown editor</shortdesc>
+  <homepage rdf:resource="https://gitlab.gnome.org/World/apostrophe" />
+  <bug-database rdf:resource="https://gitlab.gnome.org/World/apostrophe/issues"/>
+  <programming-language>Python</programming-language>
+
+  <maintainer>
+    <foaf:Person>
+      <foaf:name>Manuel Genovés</foaf:name>
+      <foaf:mbox rdf:resource="mailto:manugen@gnome.org" />
+      <foaf:account>
+        <foaf:OnlineAccount>
+          <foaf:accountServiceHomepage rdf:resource="https://gitlab.gnome.org"/>
+          <foaf:accountName>somas</foaf:accountName>
+        </foaf:OnlineAccount>
+      </foaf:account>
+    </foaf:Person>
+  </maintainer>
+</Project>
+
