@@ -2,7 +2,7 @@
 Name=Apostrophe
 # Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 Keywords=uberwriter;UberWriter;apostrophe;markdown;editor;
-Comment=Apostrophe, a simple and distraction free Markdown Editor
+Comment=Apostrophe, an elegant, distraction-free markdown editor
 Categories=GNOME;GTK;Office;
 Exec=apostrophe %U
 Icon=@icon@
