@@ -5,10 +5,16 @@
   <name>Apostrophe</name>
   <summary>An elegant, distraction-free markdown editor</summary>
   <description>
-    <p>Apostrophe is a GTK based distraction free Markdown editor, originally created by Wolf Vollprecht and maintained by Manuel Genovés. It uses pandoc as backend for markdown parsing and offers a very clean and sleek user interface.</p>
-    <p>You can install the recommended TexLive extension with the command:</p>
-    <p>flatpak install flathub org.gnome.gitlab.somas.Apostrophe.Plugin.TexLive</p>
-    <p>or from Gnome-Software</p>
+    <p>Focus on your writing with a clean, distraction-free markdown editor.</p>
+    <p>Features:</p>
+    <ul>
+      <li>An UI tailored to comfortable writing</li>
+      <li>A distraction-free mode</li>
+      <li>Dark, light and sepia themes</li>
+      <li>Everything you expect from a text editor, such as spellchecking or document statistics</li>
+      <li>Live preview of what you write</li>
+      <li>Export to all kind of formats: PDF, Word/Libreoffice, LaTeX, or even HTML slideshows</li>
+    </ul>
   </description>
   <screenshots>
     <screenshot type="default">
@@ -30,7 +36,7 @@
   
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0+</project_license>
-  <url type="homepage">https://somas.pages.gitlab.gnome.org/apostrophe/</url>
+  <url type="homepage">https://world.pages.gitlab.gnome.org/apostrophe/</url>
   <content_rating type="oars-1.1"/>
   <developer_name>Wolf V., Manuel G.</developer_name>
   <url type="bugtracker">https://gitlab.gnome.org/somas/apostrophe/-/issues</url>
