@@ -1,6 +1,6 @@
 project(
   'apostrophe',
-  version: '2.4',
+  version: '2.5',
   meson_version: '>= 0.50.0'
 )
 
