@@ -1,10 +1,11 @@
 Version 2.5
 ~~~~~~~~~~~~~~~
-Released: 
+Released: 2021-08-28
 
 Features:
 - Added Sepia Mode
 - Improved exported HTML on small screens
+- Updated metadata and runtime version
 
 Version 2.4
 ~~~~~~~~~~~~~~~
